--- a/RnDHelpDesk.Application/RnDHelpDesk.Application.csproj
+++ b/RnDHelpDesk.Application/RnDHelpDesk.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\RnDHelpDesk.Domain\RnDHelpDesk.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
 </Project>
