feat: added GenericRepository and fix IGenericRepository  typo

--- a/RnDHelpDesk.Persistence/RnDHelpDesk.Persistence.csproj
+++ b/RnDHelpDesk.Persistence/RnDHelpDesk.Persistence.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RnDHelpDesk.Application\RnDHelpDesk.Application.csproj" />
     <ProjectReference Include="..\RnDHelpDesk.Domain\RnDHelpDesk.Domain.csproj" />
   </ItemGroup>
 
